tests/main_wrapper/main_wrapper_violations.err.expected
error: at 25:9: [TC-MainBadSignature] In function 'main': single parameter must be '&out i32', found &out i64
    |
 25 | fn main(exit: &out i64) {
    |         ^^^^^^^^^^^^^^
